--- a/resources/view/MainScreenView.fxml
+++ b/resources/view/MainScreenView.fxml
@@ -11,7 +11,7 @@
                 width="1024.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0"/>
         <Button fx:id="buttonUndo" layoutX="14.0" layoutY="14.0"
                 mnemonicParsing="false"
-                onAction="#onUndoTyping"
+                onAction="#noUndoTyping"
                 prefHeight="43.5" prefWidth="159.0"
                 text="Undo Typing " />
     </children>
